# open-door

./: README.md  pyproject.toml
cfg/task/: keypoint_track.yaml  kp_pos_track.yaml  loco_flat.yaml  open_door.yaml  position_track.yaml
src/open_door/: __init__.py  command.py  command_keypoint_track.py  command_kp_pos_track.py  command_position_track.py  observation.py  reward.py
